Description of refactoring code